# gotyme-casestudy

./: Dockerfile  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  test_payload.json  test_report_generation.py
models/: metrics.json  model.pkl
models/analysis/: analysis_report.json
src/: __init__.py  fix_json.py  generate_report.py
src/analysis/: __init__.py  llm_description_generator.py  model_analysis.py  report_generator.py
src/api/: __init__.py  main.py
src/data/: __init__.py  loader.py
src/prediction/: __init__.py  predict.py
src/training/: __init__.py  train.py
src/visualization/: __init__.py  plots.py
tests/: test_model.py
